emf-system-test-utils/src/snapshots/emf_system_test_utils__snapshots__tests__get_stratagem_test_path_from_graph.snap
---
source: emf-system-test-utils/src/snapshots.rs
expression: "print_edges(&graph, &edges)"
---
edge: All has nodes (Snapshot { name: Init, available: true }, Snapshot { name: Bare, available: false })
edge: All has nodes (Snapshot { name: Bare, available: false }, Snapshot { name: LustreRpmsInstalled, available: false })
edge: All has nodes (Snapshot { name: LustreRpmsInstalled, available: false }, Snapshot { name: EmfConfigured, available: false })
edge: All has nodes (Snapshot { name: EmfConfigured, available: false }, Snapshot { name: ServersDeployed, available: false })
edge: Stratagem has nodes (Snapshot { name: ServersDeployed, available: false }, Snapshot { name: StratagemCreated, available: false })
edge: Stratagem has nodes (Snapshot { name: StratagemCreated, available: false }, Snapshot { name: StratagemDetected, available: false })
edge: Stratagem has nodes (Snapshot { name: StratagemDetected, available: false }, Snapshot { name: StratagemMountedClient, available: false })
edge: Stratagem has nodes (Snapshot { name: StratagemMountedClient, available: false }, Snapshot { name: StratagemTestTaskQueue, available: false })

